887.	[func]		sar
	A new process, kea-lfc, has been added. It is meant to
	be periodically executed by the DHCPv4 and DHCPv6 servers
	to remove redundant information from the lease files.
	See http://kea.isc.org/wiki/LFCDesign for the design.
	(Trac #3664, git cc85938b35e2d4bd00ccb74f1b83d3017ab0e41b)
	(Trac #3665, git b1707981f48b13895b50bf27176dede866576292)
	(Trac #3687, git 1e92382aaa2fbff08bbf1d6bbf0add195a7b6fae)

886.	[func]		tomek
	libdhcpsrv: Allocation Engine now uses statically assigned
	addresses when it allocates leases for the DHCPv6 clients.
	(Trac #3563, git b86b24fd011c0617515d62b7091d56fdfd1a7360)

885.	[func]		tomek
	Information-Request (stateless mode) in DHCPv6 is now supported.
	(Trac #2949, git 3185d229c39ed4660e9bc98a7f4a9d0dfbe64a04)

884.	[func]		marcin
	The DHCPv6 server configuration now allows for defining a pool
	for prefix delegation in which prefixes do not match a
	subnet prefix.
	(Trac #3647, git 5455d96cbf773e678bd6b1c3e31bfdeb617e6c13)

883.	[bug]		marcin
	libdhcpsrv: Prevent infinite loops in the allocation engine,
	when the address pool becomes exhausted.
	(Trac #3692, git f1e464558c89a6dc88ab28a25dd14a65fee62578)

882.	[func]		sar
	A utility class has been added which handles writing and
	deleting pid files as well as checking if the process with
	the given pid is running.
	(Trac #3687, git 1e92382aaa2fbff08bbf1d6bbf0add195a7b6fae)

881.	[func]		kalmus
	Extracting hardware/MAC address from the DHCPv6 remote-id
	option is now implemented.
	(Trac #3552, git 6db5fc158133b3f308c43f1fe2fa54a6f89baae1)

880.	[doc]		tomek
	kea-admin is now described in Kea User's Guide.
	(Trac #3644, git fa83c48826e41663d93e56ec7fd6983e9b0b2cd1)

879.	[bug]		fdupont
	Drop DHCPREQUEST message from an unknown client in the
	INIT-REBOOT state.
	(Trac #3656, git 8e205adc35d8e72d1802d5ee9056e6c4ac78274a)

878.	[func]		marcin
	DHCPv4 and DHCPv6 server now support the lfc-interval
	parameter which configures the interval in which the